# pushflip

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile  notes.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/commands/: heavy-duty-review.md  plan.md  propose-commits.md  review-code-custom.md  review-security-custom.md  update-after-change.md
.claude/hooks/: block-dangerous.sh  format.sh  lint.sh  log-commands.sh  pre-pr-gate.sh  protect-commit.sh  protect-files.sh  protected-paths.sh
.claude/rules/: blockchain-patterns.md  context-management.md  external-docs.md  git-commits.md  open-brain.md
.claude/skills/changelog/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.github/workflows/: telegram-notify.yml  wiki-build.yml
app/: .gitignore  Dockerfile  README.md  biome.jsonc  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/biome-plugins/: no-publickey-in-hook-deps.grit
app/src/: app.tsx  main.tsx  vite-env.d.ts
app/src/hooks/: use-faucet.ts  use-game-actions.ts  use-game-events.ts  use-game-session.ts  use-player-state.ts  use-rpc-connection-status.ts  use-scry-result.ts  use-theme.ts  use-token-balance.ts
app/src/lib/: advisor.ts  constants.ts  debug-log.ts  event-render.ts  flip-format.ts  logger.ts  program.ts  tx-error.ts  wallet-bridge.ts
app/src/providers/: query-provider.tsx  wallet-provider.tsx
clients/js/: package.json  tsconfig.json
clients/js/src/: bytes.ts  (+7 more)
dealer/: package.json
dealer/src/: dealer.ts  deck.ts  index.ts  merkle.test.ts  merkle.ts  prover.test.ts  prover.ts
docs/: CLAUDE_HOOKS.md  DEPLOYMENT_PLAN.md  EXECUTION_PLAN.md  FAQ.md  GAME_SESSION_BYTE_LAYOUT.md  HOSTING_AND_RPC.md  PINOCCHIO_RESOURCE_GUIDE.md  POSEIDON_STACK_WARNING.md  SOLANA_KIT_GUIDE.md  TELEGRAM_NOTIFICATIONS.md  ZK_RESEARCH.md
docs/wiki/: index.md
faucet/: Dockerfile  README.md  biome.jsonc  package.json  tsconfig.json
faucet/src/: config.ts  index.ts  mint.ts  rate-limit.ts  server.ts
house-ai/: package.json
program/: Cargo.toml  build.rs
program/src/: errors.rs  lib.rs
program/src/instructions/: burn_scry.rs  burn_second_chance.rs  close_game.rs  commit_deck.rs  end_round.rs  hit.rs  init_vault.rs  initialize.rs  join_round.rs  leave_game.rs  mod.rs  start_round.rs  stay.rs
program/src/instructions/bounty/: add_bounty.rs  claim_bounty.rs  close_bounty_board.rs  init_bounty_board.rs  mod.rs
program/src/state/: bounty.rs  card.rs  game_session.rs  mod.rs  player_state.rs
program/src/utils/: accounts.rs  constants.rs  deck.rs  events.rs  mod.rs  scoring.rs
program/src/zk/: groth16.rs  merkle.rs  mod.rs  poseidon_native.rs  verifying_key.rs
scripts/: deploy-tucker.sh  devnet-config.ts  init-game.ts  init-vault.ts  mint-test-flip.ts  package.json  smoke-test-bounty.ts  smoke-test-burns.ts  smoke-test-tokens.ts  smoke-test.ts  tsconfig.json  wiki-health-check.sh
scripts/lib/: script-helpers.ts
scripts/types/: circomlibjs.d.ts
tests/: Cargo.toml  build.rs
tests/src/: integration.rs  phase2.rs
wiki/: hooks.py  mkdocs.yml  requirements.txt
wiki/overrides/: .gitkeep
zk-circuits/: package.json
zk-circuits/circuits/: shuffle_verify.circom
zk-circuits/scripts/: compute_canonical_hash.mjs  export_vk_rust.mjs  generate_test_proof.mjs  setup.sh
(+41 files in other folders)
