[package]
name = "pushflip-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration"
path = "src/integration.rs"

[dependencies]
litesvm = "0.11"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-instruction = "3.0"
solana-message = "3.0"
solana-transaction = "3.0"
solana-address = { version = "2.0", features = ["decode"] }
