[package]
name = "pushflip-tests"
version = "0.1.0"
edition = "2021"
publish = false
# build.rs runs `cargo build-sbf --features skip-zk-verify` into
# `target/deploy-test/pushflip.so` on every `cargo test` and exports the
# resolved path via the `PUSHFLIP_TEST_SBF_PATH` env var. This keeps the
# test binary isolated from the production deploy artifact at
# `target/deploy/pushflip.so`. See build.rs for the full rationale.
build = "build.rs"

[[test]]
name = "integration"
path = "src/integration.rs"

[[test]]
name = "phase2"
path = "src/phase2.rs"

[dependencies]
litesvm = "0.11"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-instruction = "3.0"
solana-message = "3.0"
solana-transaction = "3.0"
solana-address = { version = "2.0", features = ["decode"] }
solana-account = "3.2"
solana-program-pack = "3.0"
solana-rent = "3.0"
solana-system-interface = "2.0"
spl-token-interface = "2.0"
spl-associated-token-account-interface = "2.0"
